Corrected some more issues - alignment of the overlay style in list view, fixed i.e. bugs and added a border to the basic list view

--- a/.design/events-plugin-code/css/all-bs.css
+++ b/.design/events-plugin-code/css/all-bs.css
@@ -451,6 +451,7 @@
 .aj-list__content {
   width: 75%;
   padding: 15px 25px;
+  border: 1px solid #eee;
 }
 @media screen and (max-width: 991px) {
   .aj-list__top {
@@ -575,6 +576,10 @@
 .aj-list--overlay .aj-list__inner {
   align-items: center;
 }
+.aj-list--overlay .aj-list__top {
+  margin-right: -25px;
+  width: 27%;
+}
 .aj-list--overlay .aj-list__image {
   height: 200px;
   background-size: cover;
@@ -586,7 +591,6 @@
 }
 .aj-list--overlay .aj-list__content {
   background: #fff;
-  margin-left: -25px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .aj-list--overlay .aj-list__date {
@@ -605,11 +609,14 @@
   position: absolute;
   bottom: 25px;
   font-size: 1.3em;
-  right: 79%;
+  right: 77%;
 }
 @media screen and (max-width: 991px) {
   .aj-list--overlay .aj-list__price {
     right: 70%;
+  }
+  .aj-list--overlay .aj-list__top {
+    width: 38%;
   }
 }
 @media screen and (max-width: 767px) {
@@ -618,8 +625,12 @@
     bottom: auto;
     top: 150px;
   }
+  .aj-list--overlay .aj-list__top {
+    margin-right: 0;
+    width: 100%;
+  }
   .aj-list--overlay .aj-list__content {
-    margin-left: 0;
+    width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
