--- a/.design/events-plugin-code/less/components/standalone/table.less
+++ b/.design/events-plugin-code/less/components/standalone/table.less
@@ -21,7 +21,7 @@
       display: flex;
       // align-items: center;
       align-items: flex-start;
-      flex: 0 1 auto;
+      flex: 1 0 auto;
       overflow: hidden;
       padding: 1.2em 1.2em;
       // height: 125px;
